--- a/main.ipynb
+++ b/main.ipynb
@@ -16,7 +16,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 13,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -34,6 +34,15 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "## Pydantic class as OpenAI's expected response format\n",
+    "\n",
+    "[OpenAI docs - structured format](https://platform.openai.com/docs/guides/structured-outputs)"
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": 14,
    "metadata": {},
@@ -41,7 +50,7 @@
    "source": [
     "class SingleSlide(BaseModel):\n",
     "    title: str\n",
-    "    subtitle: str\n",
+    "    content: str\n",
     "    visual: str\n",
     "\n",
     "class ResponseFormat(BaseModel):\n",
@@ -50,17 +59,9 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 13,
+   "execution_count": 15,
    "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "slide=[singleSlide(title='Introduction to AI Tools for Developers', subtitle='Enhancing Development Efficiency and Innovation', visual='Graphic showing the evolution of AI in software development.'), singleSlide(title='What are AI Tools?', subtitle='Understanding AI Integration in Development', visual='Infographic illustrating various AI tools and their uses.'), singleSlide(title='Key Benefits of AI Tools in Development', subtitle='Streamlining Processes and Improving Quality', visual='Chart showing efficiency improvement metrics with AI tools.'), singleSlide(title='AI Assistants for Code Generation', subtitle='Leveraging AI for Faster Coding', visual='Screenshot or demo of AI code generation tools like GitHub Copilot.'), singleSlide(title='Automated Testing Tools', subtitle='Enhancing Quality Assurance', visual='Flowchart of the automated testing process with AI tools.'), singleSlide(title='AI-Powered Debugging Tools', subtitle='Quick Identification and Resolution of Bugs', visual='Graph showing the reduction of debugging time with AI tools.'), singleSlide(title='Natural Language Processing for Documentation', subtitle='Improving Documentation Practices', visual='Before and after example of documentation improved by AI.'), singleSlide(title='AI in Project Management', subtitle='Optimizing Resource Allocation and Scheduling', visual='Gantt chart illustrating project management trends with AI.'), singleSlide(title='Ethical Considerations for AI Tools', subtitle='Addressing Responsibility in AI Development', visual='Diagram of ethical AI practices and considerations.'), singleSlide(title='Conclusion and Future Outlook', subtitle='The Future of AI Tools in Development', visual='Graphic showing projected trends in AI development tools.')]\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "from prompts import sys_prompt, usr_prompt\n",
     "\n",
@@ -78,52 +79,44 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 18,
+   "execution_count": 16,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
+      "List of Day-to-Day AI Tools for Developers\n",
+      "An overview of essential AI tools that can enhance productivity and efficiency in development tasks.\n",
+      "image of diverse AI tools\n",
+      "\n",
       "Introduction to AI Tools for Developers\n",
-      "Enhancing Development Efficiency and Innovation\n",
-      "Graphic showing the evolution of AI in software development.\n",
+      "The rapid evolution of AI technology has provided developers with a plethora of tools to streamline workflows, troubleshoot coding issues, and enhance overall project outcomes. This presentation will discuss some of the most useful AI tools available today and how they can be integrated into your daily coding practices.\n",
+      "introductory graphic of AI technology\n",
       "\n",
-      "What are AI Tools?\n",
-      "Understanding AI Integration in Development\n",
-      "Infographic illustrating various AI tools and their uses.\n",
+      "Search Tools: Perplexity\n",
+      "Perplexity is an advanced search tool that leverages AI to provide relevant search results quickly. Ideal for developers looking for quick answers and references during coding.\n",
+      "screenshot of Perplexity interface\n",
       "\n",
-      "Key Benefits of AI Tools in Development\n",
-      "Streamlining Processes and Improving Quality\n",
-      "Chart showing efficiency improvement metrics with AI tools.\n",
+      "Research Tools: NotebookLM\n",
+      "NotebookLM helps developers organize research and collaborate on notes seamlessly. It integrates coding environments with documentation, making it easier to access vital information.\n",
+      "image of NotebookLM features\n",
       "\n",
-      "AI Assistants for Code Generation\n",
-      "Leveraging AI for Faster Coding\n",
-      "Screenshot or demo of AI code generation tools like GitHub Copilot.\n",
+      "Transcription Tool: Otter.ai\n",
+      "Otter.ai transforms audio notes into written documentation. Developers can use it to transcribe meetings or brainstorming sessions, enhancing team communication and record-keeping.\n",
+      "screenshot showing Otter.ai transcription process\n",
       "\n",
-      "Automated Testing Tools\n",
-      "Enhancing Quality Assurance\n",
-      "Flowchart of the automated testing process with AI tools.\n",
+      "Manual Coding LLM Integration\n",
+      "Implementing Language Learning Models (LLMs) into your manual coding processes can boost efficiency. This slide provides a step-by-step approach to effectively integrate LLMs into your applications.\n",
+      "diagram of LLM integration process\n",
       "\n",
-      "AI-Powered Debugging Tools\n",
-      "Quick Identification and Resolution of Bugs\n",
-      "Graph showing the reduction of debugging time with AI tools.\n",
+      "Summary of AI Tools for Developers\n",
+      "This section summarizes the AI tools discussed, highlighting their unique features and potential benefits in the development cycle.\n",
+      "bullet points listing tools with icons\n",
       "\n",
-      "Natural Language Processing for Documentation\n",
-      "Improving Documentation Practices\n",
-      "Before and after example of documentation improved by AI.\n",
-      "\n",
-      "AI in Project Management\n",
-      "Optimizing Resource Allocation and Scheduling\n",
-      "Gantt chart illustrating project management trends with AI.\n",
-      "\n",
-      "Ethical Considerations for AI Tools\n",
-      "Addressing Responsibility in AI Development\n",
-      "Diagram of ethical AI practices and considerations.\n",
-      "\n",
-      "Conclusion and Future Outlook\n",
-      "The Future of AI Tools in Development\n",
-      "Graphic showing projected trends in AI development tools.\n",
+      "Q & A Session\n",
+      "Open the floor for questions regarding the tools presented, their integration, and experiences with AI technologies in coding.\n",
+      "image inviting questions\n",
       "\n"
      ]
     }
@@ -131,39 +124,110 @@
    "source": [
     "for i in event.slide:\n",
     "    print(i.title)\n",
-    "    print(i.subtitle)\n",
+    "    print(i.content)\n",
     "    print(i.visual)\n",
-    "    print(\"\")"
+    "    print()"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "## Function to create images with Stable Diffusion\n",
+    "\n",
+    "Using a local Stable Diffusion API to create the images, currently WebUI Forge."
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 39,
+   "execution_count": 17,
    "metadata": {},
    "outputs": [],
    "source": [
-    "import requests\n",
     "import base64\n",
+    "from pathlib import Path\n",
+    "\n",
+    "import requests\n",
     "\n",
     "# Define the URL and the payload to send.\n",
     "url = \"http://127.0.0.1:7860\"\n",
     "\n",
-    "payload = {\n",
-    "    \"prompt\": \"cute puppy\",\n",
-    "    \"steps\": 20,\n",
-    "    \"sampler_name\": \"DPM++ 2M\",\n",
-    "    \"scheduler\":\"Beta\",\n",
-    "    \"cfg_scale\":1\n",
-    "}\n",
+    "def imagecreator(prompt: str, name: str, width: int, height:int):\n",
+    "    payload = {\n",
+    "        \"prompt\": prompt,\n",
+    "        \"steps\": 20,\n",
+    "        \"sampler_name\": \"DPM++ 2M\",\n",
+    "        \"scheduler\":\"Beta\",\n",
+    "        \"cfg_scale\":1,\n",
+    "        \"width\": width,\n",
+    "        \"height\": height,\n",
+    "    }\n",
     "\n",
-    "# Send said payload to said URL through the API.\n",
-    "response = requests.post(url=f'{url}/sdapi/v1/txt2img', json=payload)\n",
-    "r = response.json()\n",
+    "    # Send said payload to said URL through the API.\n",
+    "    response = requests.post(url=f\"{url}/sdapi/v1/txt2img\", json=payload)\n",
+    "    r = response.json()\n",
     "\n",
-    "# Decode and save the image.\n",
-    "with open(\"output.png\", 'wb') as f:\n",
-    "    f.write(base64.b64decode(r['images'][0]))"
+    "    # Decode and save the image.\n",
+    "    with Path(f\"images/{name}.png\").open(\"wb\") as f:\n",
+    "        f.write(base64.b64decode(r[\"images\"][0]))"
    ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "## Create a PPTX with the responses generated with ChatGPT and the Stable Diffusion images\n",
+    "\n",
+    "Using [Python-pptx](https://python-pptx.readthedocs.io/en/latest/index.html) for PowerPoint creation"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 18,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "from pptx import Presentation\n",
+    "from pptx.util import Inches\n",
+    "\n",
+    "prs = Presentation()\n",
+    "bullet_slide_layout = prs.slide_layouts[1]\n",
+    "\n",
+    "for i in event.slide:\n",
+    "    slide = prs.slides.add_slide(bullet_slide_layout)\n",
+    "    shapes = slide.shapes\n",
+    "\n",
+    "\n",
+    "\n",
+    "    #Add background image\n",
+    "    left = top = Inches(0)\n",
+    "    slide_width = prs.slide_width\n",
+    "    slide_height = prs.slide_height\n",
+    "\n",
+    "    imagecreator(i.visual+\"NO TEXT\", i.title,955,537)\n",
+    "    pic = slide.shapes.add_picture(\n",
+    "        str(Path(f\"images/{i.title}.png\")),\n",
+    "        left,top, slide_width, slide_height)\n",
+    "\n",
+    "    # Add Text\n",
+    "    title_shape = shapes.title\n",
+    "    body_shape = shapes.placeholders[1]\n",
+    "\n",
+    "    title_shape.text = i.title\n",
+    "\n",
+    "    tf = body_shape.text_frame\n",
+    "    tf.text = i.content\n",
+    "\n",
+    "\n",
+    "prs.save(\"test.pptx\")"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
   }
  ],
  "metadata": {
