--- a/main.ipynb
+++ b/main.ipynb
@@ -16,10 +16,12 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 13,
+   "execution_count": null,
    "metadata": {},
    "outputs": [],
    "source": [
+    "from __future__ import annotations\n",
+    "\n",
     "import os\n",
     "\n",
     "from dotenv import load_dotenv\n",
@@ -44,14 +46,16 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 14,
+   "execution_count": null,
    "metadata": {},
    "outputs": [],
    "source": [
+    "\n",
     "class SingleSlide(BaseModel):\n",
     "    title: str\n",
     "    content: str\n",
     "    visual: str\n",
+    "\n",
     "\n",
     "class ResponseFormat(BaseModel):\n",
     "    slide: list[SingleSlide]"
@@ -59,7 +63,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 15,
+   "execution_count": null,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -69,7 +73,7 @@
     "completion = client.beta.chat.completions.parse(\n",
     "    model=\"gpt-4o-mini\",\n",
     "    messages=[\n",
-    "        {\"role\": \"system\", \"content\":sys_prompt},\n",
+    "        {\"role\": \"system\", \"content\": sys_prompt},\n",
     "        {\"role\": \"user\", \"content\": usr_prompt},\n",
     "    ],\n",
     "    response_format=ResponseFormat,\n",
@@ -79,7 +83,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 16,
+   "execution_count": null,
    "metadata": {},
    "outputs": [
     {
@@ -123,10 +127,7 @@
    ],
    "source": [
     "for i in event.slide:\n",
-    "    print(i.title)\n",
-    "    print(i.content)\n",
-    "    print(i.visual)\n",
-    "    print()"
+    "    print(f\"{i.title}\\n{i.content}\\n{i.visual}\\n\")"
    ]
   },
   {
@@ -140,7 +141,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 17,
+   "execution_count": null,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -152,19 +153,29 @@
     "# Define the URL and the payload to send.\n",
     "url = \"http://127.0.0.1:7860\"\n",
     "\n",
-    "def imagecreator(prompt: str, name: str, width: int, height:int):\n",
+    "\n",
+    "def imagecreator(prompt: str, name: str, width: int, height: int) -> None:\n",
+    "    \"\"\"Access local Stable Diffusion to create images.\n",
+    "\n",
+    "    Args:\n",
+    "        prompt (str): prompt for image creation\n",
+    "        name (str): Name of the resulting image\n",
+    "        width (int): Image Width\n",
+    "        height (int): Image Height\n",
+    "\n",
+    "    \"\"\"\n",
     "    payload = {\n",
     "        \"prompt\": prompt,\n",
     "        \"steps\": 20,\n",
     "        \"sampler_name\": \"DPM++ 2M\",\n",
-    "        \"scheduler\":\"Beta\",\n",
-    "        \"cfg_scale\":1,\n",
+    "        \"scheduler\": \"Beta\",\n",
+    "        \"cfg_scale\": 1,\n",
     "        \"width\": width,\n",
     "        \"height\": height,\n",
     "    }\n",
     "\n",
     "    # Send said payload to said URL through the API.\n",
-    "    response = requests.post(url=f\"{url}/sdapi/v1/txt2img\", json=payload)\n",
+    "    response = requests.post(url=f\"{url}/sdapi/v1/txt2img\", json=payload, timeout= 300)\n",
     "    r = response.json()\n",
     "\n",
     "    # Decode and save the image.\n",
@@ -183,7 +194,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 18,
+   "execution_count": null,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -197,17 +208,15 @@
     "    slide = prs.slides.add_slide(bullet_slide_layout)\n",
     "    shapes = slide.shapes\n",
     "\n",
-    "\n",
-    "\n",
-    "    #Add background image\n",
+    "    # Add background image\n",
     "    left = top = Inches(0)\n",
     "    slide_width = prs.slide_width\n",
     "    slide_height = prs.slide_height\n",
     "\n",
-    "    imagecreator(i.visual+\"NO TEXT\", i.title,955,537)\n",
+    "    imagecreator(i.visual + \"NO TEXT\", i.title, 955, 537)\n",
     "    pic = slide.shapes.add_picture(\n",
-    "        str(Path(f\"images/{i.title}.png\")),\n",
-    "        left,top, slide_width, slide_height)\n",
+    "        str(Path(f\"images/{i.title}.png\")), left, top, slide_width, slide_height,\n",
+    "    )\n",
     "\n",
     "    # Add Text\n",
     "    title_shape = shapes.title\n",
